<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">

        <item
            android:id="@+id/nav_better_vegan"
            android:icon="@drawable/ic_bubble_chart_black_24dp"
            android:title="@string/BetterVeganName" />
        <item
            android:id="@+id/nav_news"
            android:icon="@drawable/ic_public_black_24dp"
            android:title="@string/news" />
        <item
            android:id="@+id/nav_restaurants"
            android:icon="@drawable/ic_restaurant_black_24dp"
            android:title="@string/restaurants" />
        <item
            android:id="@+id/nav_recipes"
            android:icon="@drawable/ic_book_black_24dp"
            android:title="@string/recipes" />

    </group>

    <item android:title="Bug Report">
        <menu>
            <item
                android:id="@+id/nav_bug_report"
                android:icon="@drawable/ic_bug_report_black_24dp"
                android:title="@string/bugReport" />
        </menu>
    </item>

</menu>
