<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:id="@+id/parent_layout"
    tools:context="layout.SignInFragment">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/login_icon"
        android:id="@+id/login_icon"
        android:layout_marginTop="121dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="26dp"
        android:fontFamily="sans-serif-light"
        android:text="@string/app_name"
        android:textAlignment="center"
        android:textColor="#404040"
        android:textSize="18pt"
        android:layout_below="@+id/login_icon"
        android:layout_centerHorizontal="true" />


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center_horizontal"
        android:layout_below="@+id/title"
        android:layout_centerHorizontal="true">

    <Button
        android:id="@+id/facebook"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingBottom="12dp"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        android:paddingTop="12dp"
        android:onClick="onClickFacebook"
        android:textColor="#FFF"
        android:textAllCaps="true"
        android:text="@string/facebookSignInText"
        android:theme="@style/facebookButtonStyle"
        android:layout_marginTop="34dp" />

    <Button
        android:id="@+id/google"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingBottom="12dp"
        android:paddingTop="12dp"
        android:onClick="onClickGoogle"
        android:text="@string/googleSignInText"
        android:textAllCaps="true"
        android:textColor="#FFFF"
        android:theme="@style/googleButtonStyle" />
    </LinearLayout>

</RelativeLayout>
